Switch to kramdown parser and fix image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* Center class for images */
+.center {
+  text-align: center;
+}
+
 /* Solarized */
 a {
   color: #268bd2; }
